workspace-sf/force-app/main/default/objects/Email_Endosso_Individual__c/Email_Endosso_Individual__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Email Endosso Individual</label>
</CustomObject>