workspace-sf/force-app/main/default/objects/Email_Endosso_Individual__c/fields/Assinatura__c.field-meta.xml
<CustomField>
    <fullName>Assinatura__c</fullName>
    <label>Assinatura</label>
    <type>Url</type>
</CustomField>