workspace-sf/force-app/main/default/objects/Email_Endosso_Individual__c/fields/Clube_Porto__c.field-meta.xml
<CustomField>
    <fullName>Clube_Porto__c</fullName>
    <label>Clube Porto</label>
    <type>Url</type>
</CustomField>