workspace-sf/force-app/main/default/objects/Email_Endosso_Individual__c/fields/Porto_Seguro_Topo__c.field-meta.xml
<CustomField>
    <fullName>Porto_Seguro_Topo__c</fullName>
    <label>Porto Seguro Topo</label>
    <type>Url</type>
</CustomField>